lib_LTLIBRARIES = libweb.la
libweb_la_SOURCES = \
                     DBI_Web.cpp \
                     fcgiBALLOON.cpp \
                     fcgiCHAT.cpp \
                     fcgiHNYBALLOON.cpp \
                     fcgiLASTPOSITION.cpp \
                     Web.cpp \
                     web.cpp

libweb_la_LDFLAGS = -module -export-dynamic
